# finalproxy

./: .gitignore  Cargo.toml  README.md
keys/: rootCA.key  rootCA.pem
src/: ctosdecoder.rs  fakegencert.rs  forwarder.rs  main.rs  models.rs  modules.rs  stocdecoder.rs  tcpproxy.rs
