[package]
name = "finalproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora-http = { version = "0.4", optional = true }
pingora-core = { version = "0.4", features = ["openssl"], optional = true }
pingora-proxy = { version = "0.4", optional = true }
pingora-openssl = { version = "0.4", optional = true }
pingora-error = { version = "0.4.0", optional = true }
async-trait = { version = "0.1", optional = true }
openssl = { version = "0.10.71", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
bytes = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
once_cell = { version = "1.19", optional = true }
dashmap = { version = "6.1", optional = true }
anyhow = {  version = "1.0.97", optional = true }

[patch.crates-io]
pingora-core = { path = "./pingora/pingora-core" }
pingora-http = { path = "./pingora/pingora-http" }
pingora-cache = { path = "./pingora/pingora-cache" }
pingora-proxy = { path = "./pingora/pingora-proxy" }
pingora-openssl = { path = "./pingora/pingora-openssl" }

[features]
server = ["pingora-http", "pingora-core", "pingora-proxy", "pingora-openssl", "pingora-error", "async-trait", "bytes", "serde", "serde_json", "once_cell", "dashmap", "openssl", "tokio", "anyhow"]
forwarder = ["tokio", "anyhow"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "forwarder"
path = "src/forwarder.rs"
required-features = ["forwarder"]