[package]
name = "finalproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.4.0", optional = true }
pingora-http = { version = "0.4", optional = true }
pingora-core = { version = "0.4", features = ["openssl"], optional = true }
pingora-proxy = { version = "0.4", optional = true }
pingora-openssl = { version = "0.4", optional = true }
pingora-error = { version = "0.4.0", optional = true }
async-trait = { version = "0.1", optional = true }
openssl = { version = "0.10.71", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
bytes = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
once_cell = { version = "1.21", optional = true }
dashmap = { version = "6.1", optional = true }
env_logger = "0.11.3"
log = "0.4.21"
chrono = { version = "0.4.40", optional = true }
flate2 = { version = "1.1.0",features = ["any_zlib", "libz-sys"], optional = true }
uuid = { version = "1.16.0", features = ["v4"], optional = true }
socket2 = { version =  "0.5.9", features = ["all"] ,optional = true }

[patch.crates-io]
pingora = { path = "./pingora/pingora" }
pingora-core = { path = "./pingora/pingora-core" }
pingora-http = { path = "./pingora/pingora-http" }
pingora-cache = { path = "./pingora/pingora-cache" }
pingora-proxy = { path = "./pingora/pingora-proxy" }
pingora-openssl = { path = "./pingora/pingora-openssl" }

[features]
server = ["uuid", "socket2", "pingora" ,"pingora-http", "pingora-core", "pingora-proxy", "pingora-openssl", "pingora-error", "async-trait", "bytes", "serde", "serde_json", "once_cell", "dashmap", "openssl", "tokio", "chrono", "flate2"]
forwarder = ["tokio"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "forwarder"
path = "src/forwarder.rs"
required-features = ["forwarder"]